--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- 4 yoga mudra -->
         <li>
           <form name="" id="yogaMudra">
-            <audio id="" name="startAudio" src="./audio/enter.mp3"></audio>
+            <audio id="" name="startAudio" src="./audio/yogaMudra.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Поза – символ йогина, отказавшегося от заблуждения</h3>
