--- a/index.html
+++ b/index.html
@@ -196,11 +196,37 @@
                 <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
               </label>
               <button class="btn-add" type="submit">add to practice</button>
-              <!-- <button type="button" name="delete">delete</button> -->
             </fieldset>
           </form>
         </li>
-
+        <form name="" id="">
+          <audio id="" name="" src="./audio"></audio>
+          <fieldset class="fieldDescription">
+            <legend class="legend">Description</legend>
+            <h3 class="title-desc">Поза лука</h3>
+            <p class="asana-desc">
+              Сейчас я расскажу тебе о позе лука. Положи свое тело на живот, согни ноги в коленях, захвати ладонями
+              лодыжки ног и так оставайся некоторое время. Дождись, пока пробудится энергия этой позы. Затем, о
+              прекрасный ученик, начни разгибать ноги в коленях и прогибаться в спине. Так ты примешь позу лука.
+              Оставайся в ней столько, сколько позволит тебе твое тело. Эта непревзойденная поза по разжиганию пупочного
+              огня. Слабый жизненный огонь лечится этой позой. Плечи и суставы рук излечиваются этой позой. Много
+              негативной кармы пережигается ею, как в топке.
+            </p>
+            <img class="img-desc" src="./images/luk.png" alt="" />
+          </fieldset>
+          <fieldset class="time-field">
+            <legend class="legend">asana performens time</legend>
+            <label class="time-label" for="">
+              asana minutes:
+              <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+            </label>
+            <label class="time-label" for="">
+              break minutes:
+              <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+            </label>
+            <button class="btn-add" type="submit">add to practice</button>
+          </fieldset>
+        </form>
         <li>
           <h3>Поза лука</h3>
           <p>
