--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!--1 початок практики -->
         <li>
           <form name="startPractice" id="start">
-            <audio id="" name="startAudio" src="./audio/enter.mp3"></audio>
+            <audio id="" name="startAudio" src="./audio/audacity/start.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Вход в практику</h3>
