--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="added"></div>
 
     <!-- пікалка за десять секунд до завершення -->
-    <audio id="rest10cek" src="./audio/end.mp3"></audio>
+    <audio id="rest10cek" src="./audio/ten-second-to-finish-asana.mp3"></audio>
     <!-- а зараз відпочиваємо -->
     <audio id="myAudio" src="./audio/rest.mp3"></audio>
 
@@ -79,7 +79,7 @@
         <!-- 2 "paschimottanasana-->
         <li>
           <form name="" id="paschimottanasana">
-            <audio id="myAudio" src="./audio/poza_jivota.mp3"></audio>
+            <audio id="myAudio" src="./audio/audacity/paschimot1.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Поза для живота</h3>
@@ -108,7 +108,7 @@
         <!--3 bhujangasana" -->
         <li>
           <form name="" id="bhujangasana">
-            <audio id="myAudio" src="./audio/Vot_poza_kobry___bkhudzhangas.mp3"></audio>
+            <audio id="myAudio" src="./audio/audacity/cobra2.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Поза кобры – бхуджангасана</h3>
