--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <!-- 4 yoga mudra -->
         <li>
           <form name="" id="yogaMudra">
-            <audio id="" name="startAudio" src="./audio/yogaMudra.mp3"></audio>
+            <audio id="" name="startAudio" src="./audio/audacity/3yogaMudra.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Поза – символ йогина, отказавшегося от заблуждения</h3>
@@ -170,10 +170,10 @@
             </fieldset>
           </form>
         </li>
-        <!-- 5 naklon  -->
+        <!-- 5 naklon uttanasana -->
         <li>
           <form name="" id="">
-            <audio id="" name="uttanAsasana" src="./audio/uttanAsasana.mp3"></audio>
+            <audio id="" name="uttanAsasana" src="./audio/audacity/utanasana4.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
               <h3 class="title-desc">Наклон(Uttanasana)</h3>
@@ -199,34 +199,36 @@
             </fieldset>
           </form>
         </li>
-        <form name="" id="">
-          <audio id="" name="" src="./audio"></audio>
-          <fieldset class="fieldDescription">
-            <legend class="legend">Description</legend>
-            <h3 class="title-desc">Поза лука</h3>
-            <p class="asana-desc">
-              Сейчас я расскажу тебе о позе лука. Положи свое тело на живот, согни ноги в коленях, захвати ладонями
-              лодыжки ног и так оставайся некоторое время. Дождись, пока пробудится энергия этой позы. Затем, о
-              прекрасный ученик, начни разгибать ноги в коленях и прогибаться в спине. Так ты примешь позу лука.
-              Оставайся в ней столько, сколько позволит тебе твое тело. Эта непревзойденная поза по разжиганию пупочного
-              огня. Слабый жизненный огонь лечится этой позой. Плечи и суставы рук излечиваются этой позой. Много
-              негативной кармы пережигается ею, как в топке.
-            </p>
-            <img class="img-desc" src="./images/luk.png" alt="" />
-          </fieldset>
-          <fieldset class="time-field">
-            <legend class="legend">asana performens time</legend>
-            <label class="time-label" for="">
-              asana minutes:
-              <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
-            </label>
-            <label class="time-label" for="">
-              break minutes:
-              <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
-            </label>
-            <button class="btn-add" type="submit">add to practice</button>
-          </fieldset>
-        </form>
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/luk5.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза лука</h3>
+              <p class="asana-desc">
+                Сейчас я расскажу тебе о позе лука. Положи свое тело на живот, согни ноги в коленях, захвати ладонями
+                лодыжки ног и так оставайся некоторое время. Дождись, пока пробудится энергия этой позы. Затем, о
+                прекрасный ученик, начни разгибать ноги в коленях и прогибаться в спине. Так ты примешь позу лука.
+                Оставайся в ней столько, сколько позволит тебе твое тело. Эта непревзойденная поза по разжиганию
+                пупочного огня. Слабый жизненный огонь лечится этой позой. Плечи и суставы рук излечиваются этой позой.
+                Много негативной кармы пережигается ею, как в топке.
+              </p>
+              <img class="img-desc" src="./images/luk.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
 
         <li>
           <h3>Поза кошки</h3>
