--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             </fieldset>
           </form>
         </li>
+        <!--6 posa luka -->
         <li>
           <form name="" id="">
             <audio id="" name="" src="./audio/audacity/luk5.mp3"></audio>
@@ -229,27 +230,65 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 7 posa cat-->
         <li>
-          <h3>Поза кошки</h3>
-          <p>
-            Встань на оба колена и обе руки. Затем прогнись так, чтобы голова, руки, грудь были на земле. Как кошка,
-            которая пролезает под забором или подтягивается. Оставайся в этой позе долго, чтобы энергия с верхней части
-            таза стекла к голове. Следи, чтобы позвоночник был изящно согнут вниз. Расстройство живота и легких помогает
-            устранить эта поза. Станешь выносливым, разовьешь разум.
-          </p>
-          <img src="./images/koshka.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/koshka6.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза кошки</h3>
+              <p class="asana-desc">
+                Встань на оба колена и обе руки. Затем прогнись так, чтобы голова, руки, грудь были на земле. Как кошка,
+                которая пролезает под забором или подтягивается. Оставайся в этой позе долго, чтобы энергия с верхней
+                части таза стекла к голове. Следи, чтобы позвоночник был изящно согнут вниз. Расстройство живота и
+                легких помогает устранить эта поза. Станешь выносливым, разовьешь разум.
+              </p>
+              <img class="img-desc" src="./images/koshka.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+        <!-- 8 skrutka -->
         <li>
-          <h3>Поза скрутки</h3>
-          <p>
-            Сядь на ноги, согнутые в коленях. Выпрями спину, шею, голову. Затем перебрось левую ступню за правое колено.
-            Затем поверни спину, шею голову влево, помогая руками повернуться налево, как можно больше. Находись в этой
-            позе долго. Этим устранишь многие болезни позвоночника. Этой позой можешь поменять течение лунной энергии на
-            солнечную. Или солнечной энергии на лунную. В таком же порядке вернись в исходное положение и сделай
-            упражнение вправо. Делая эту асану поймешь двойственность мира, осознаешь единое за двойственным.
-          </p>
-          <img src="./images/skrutka.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/arthamatydrasana7.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза скрутки</h3>
+              <p class="asana-desc">
+                Сядь на ноги, согнутые в коленях. Выпрями спину, шею, голову. Затем перебрось левую ступню за правое
+                колено. Затем поверни спину, шею голову влево, помогая руками повернуться налево, как можно больше.
+                Находись в этой позе долго. Этим устранишь многие болезни позвоночника. Этой позой можешь поменять
+                течение лунной энергии на солнечную. Или солнечной энергии на лунную. В таком же порядке вернись в
+                исходное положение и сделай упражнение вправо. Делая эту асану поймешь двойственность мира, осознаешь
+                единое за двойственным.
+              </p>
+              <img class="img-desc" src="./images/skrutka.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
 
         <li>
