--- a/index.html
+++ b/index.html
@@ -291,52 +291,130 @@
           </form>
         </li>
 
+        <!--9 Поза плуга – халасана -->
         <li>
-          <h3>Поза плуга – халасана</h3>
-          <p>
-            Положи свое прямое тело на спину. Сделай вдох, с выдохом забрось свои прямые ноги за голову. Коснись ими
-            земли за головой. Руки пусть свободно лежат на земле, либо помести их за голову. Эта поза известна, как поза
-            плуга – халасана. Она устраняет боли в пояснице, а также шее.
-          </p>
-          <img src="./images/plug.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/plug8.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза плуга – халасана</h3>
+              <p class="asana-desc">
+                Положи свое прямое тело на спину. Сделай вдох, с выдохом забрось свои прямые ноги за голову. Коснись ими
+                земли за головой. Руки пусть свободно лежат на земле, либо помести их за голову. Эта поза известна, как
+                поза плуга – халасана. Она устраняет боли в пояснице, а также шее.
+              </p>
+              <img class="img-desc" src="./images/plug.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+
+        <!--10 Гамукхасана – поза коровьей головы -->
         <li>
-          <h3>Гамукхасана – поза коровьей головы</h3>
-          <p>
-            Гамукхасана – поза коровьей головы. Сядь на пол на согнутые ноги в коленях. Перебрось одну ногу через
-            другую, выпрями спину. Забрось одну руку, согнутую в локте, за спину. И другую руку, также согнутую в локте,
-            забрось за спину. Затем, пусть ладони рук сомкнуться за спиной. Повторяй это упражнение в другую сторону.
-            Этой позой переключаются каналы с лунного на солнечный и с солнечного на лунный. Она применяется для
-            выполнения мудр и банкх.
-          </p>
-          <img src="./images/korova.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/ghomukasana9.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Гамукхасана – поза коровьей головы</h3>
+              <p class="asana-desc">
+                Гамукхасана – поза коровьей головы. Сядь на пол на согнутые ноги в коленях. Перебрось одну ногу через
+                другую, выпрями спину. Забрось одну руку, согнутую в локте, за спину. И другую руку, также согнутую в
+                локте, забрось за спину. Затем, пусть ладони рук сомкнуться за спиной. Повторяй это упражнение в другую
+                сторону. Этой позой переключаются каналы с лунного на солнечный и с солнечного на лунный. Она
+                применяется для выполнения мудр и банкх.
+              </p>
+              <img class="img-desc" src="./images/korova.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+        <!--11 Перевернутая поза – випаритакарани -->
         <li>
-          <h3>Перевернутая поза – випаритакарани</h3>
-          <p>
-            Выслушай же описание перевернутой позы – випаритакарани. В прекрасном месте положи прямое тело на пол.
-            Подними ноги вверх, поддерживая низ туловища руками. Так оставайся долго. Этим упражнением реку времени
-            обратишь вспять. Будешь молодеть, все морщины расправятся. Этой асаной йоги меняют энергию и сознание
-            местами. Бесчисленные блага даруются этой позой. Но не переусердствуй. Продолжительность увеличивай
-            постепенно. Хорошо питайся и избегай дурных компаний. Йог, выполняющий эту позу, держит время в объятьях.
-            Если же ноги отведешь дальше от головы, чтобы они держались на руках – будешь господином половой энергии.
-            Только лишь тогда достигается брахмачарья, когда эта энергия под контролем
-          </p>
-          <img src="./images/viparita.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/viparytacarany10.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Перевернутая поза – випаритакарани</h3>
+              <p class="asana-desc">
+                Выслушай же описание перевернутой позы – випаритакарани. В прекрасном месте положи прямое тело на пол.
+                Подними ноги вверх, поддерживая низ туловища руками. Так оставайся долго. Этим упражнением реку времени
+                обратишь вспять. Будешь молодеть, все морщины расправятся. Этой асаной йоги меняют энергию и сознание
+                местами. Бесчисленные блага даруются этой позой. Но не переусердствуй. Продолжительность увеличивай
+                постепенно. Хорошо питайся и избегай дурных компаний. Йог, выполняющий эту позу, держит время в
+                объятьях. Если же ноги отведешь дальше от головы, чтобы они держались на руках – будешь господином
+                половой энергии. Только лишь тогда достигается брахмачарья, когда эта энергия под контролем
+              </p>
+              <img class="img-desc" src="./images/viparita.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+        <!-- 12 Полукоролевская поза – артха сиршасана -->
         <li>
-          <h3>Полукоролевская поза – артха сиршасана</h3>
-          <p>
-            Помести голову на пол, обхвати ее руками. Ноги при этом поставь на колени. Затем, выпрями ноги так, чтобы
-            опираться на ступни ног, голову и на руки, обхватывающие голову, чтобы тело было согнуто в пояснице. Так
-            оставайся и приобретешь острый разум, отличное зрение и знание тончайших энергий. По своему действию эта
-            асана сравнивается со стойкой на голове, поэтому она называется полукоролевская поза – артха сиршасана.
-            Ученик мой, если ты будешь наделен властью, если будешь вести жить раджи, которая требует постоянной
-            бдительности и которая требует сияние твоей личности, подобно сиянию Солнца, чтобы вызвать уважение
-            приближенных и страх недругов, выполняй эту королевскую позу.
-          </p>
-          <img src="./images/arthaSirhasana.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/arthasirhasana11.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Полукоролевская поза – артха сиршасана</h3>
+              <p class="asana-desc">
+                Помести голову на пол, обхвати ее руками. Ноги при этом поставь на колени. Затем, выпрями ноги так,
+                чтобы опираться на ступни ног, голову и на руки, обхватывающие голову, чтобы тело было согнуто в
+                пояснице. Так оставайся и приобретешь острый разум, отличное зрение и знание тончайших энергий. По
+                своему действию эта асана сравнивается со стойкой на голове, поэтому она называется полукоролевская поза
+                – артха сиршасана. Ученик мой, если ты будешь наделен властью, если будешь вести жить раджи, которая
+                требует постоянной бдительности и которая требует сияние твоей личности, подобно сиянию Солнца, чтобы
+                вызвать уважение приближенных и страх недругов, выполняй эту королевскую позу.
+              </p>
+              <img class="img-desc" src="./images/arthaSirhasana.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+
         <li>
           <h3>Поза раджи – сишасана</h3>
           <p>
