--- a/index.html
+++ b/index.html
@@ -414,36 +414,91 @@
             </fieldset>
           </form>
         </li>
+        <!--13 Поза раджи – сиршасана -->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/sirhasana12.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза раджи – сиршасана</h3>
+              <p class="asana-desc">
+                Вот поза раджи – сиршасана. Пусть раджа в прекрасном месте поместит свое тело на голову, чтобы опираться
+                только на голову и локти рук, а тело при этом было бы прямым. Если управляешь страной и испытываешь
+                недостаток времени – практикуй хотя бы эту позу.
+              </p>
+              <img class="img-desc" src="./images/sirshasana.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
+        <!-- 14 Сарвангасана – стойка на плечах -->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/sarvangasana13.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Сарвангасана – стойка на плечах</h3>
+              <p class="asana-desc">
+                Сарвангасана – стойка на плечах. Ляг на землю на спину. Подними ноги и туловище вверх. Пусть они будут
+                на прямой линии вертикально. Подбородок при этом пусть упирается в грудь. Руки можешь держать вдоль
+                тела, можешь подпирать или туловище, можешь свободно положить их на землю. Эта поза подобна сиршасане
+                (стойке на голове). Если овладеешь этой асаной, будешь господином верхних центров своего тела.
+              </p>
+              <img class="img-desc" src="./images/stoykaNaPlechax.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
+        <!-- 14 Уштрасана – поза верблюда -->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/ushtrasana14.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Уштрасана – поза верблюда</h3>
+              <p class="asana-desc">
+                Уштрасана – поза верблюда. Стань на колени, прогнись в спине назад и упрись ладонями рук в пятки ног.
+                Эта поза позволяет побрести контроль над верхними дыхательными органами и дает выносливость.
+              </p>
+              <img class="img-desc" src="./images/camel.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
 
-        <li>
-          <h3>Поза раджи – сишасана</h3>
-          <p>
-            Вот поза раджи – сишасана. Пусть раджа в прекрасном месте поместит свое тело на голову, чтобы опираться
-            только на голову и локти рук, а тело при этом было бы прямым. Если управляешь страной и испытываешь
-            недостаток времени – практикуй хотя бы эту позу.
-          </p>
-          <img src="./images/sirshasana.png" />
-        </li>
-        <li>
-          <h3>Сарвангасана – стойка на плечах</h3>
-          <p>
-            Сарвангасана – стойка на плечах. Ляг на землю на спину. Подними ноги и туловище вверх. Пусть они будут на
-            прямой линии вертикально. Подбородок при этом пусть упирается в грудь. Руки можешь держать вдоль тела,
-            можешь подпирать или туловище, можешь свободно положить их на землю. Эта поза подобна сиршасане (стойке на
-            голове). Если овладеешь этой асаной, будешь господином верхних центров своего тела.
-          </p>
-          <img src="./images/stoykaNaPlechax.png" />
-        </li>
-
-        <li>
-          <h3>Уштрасана – поза верблюда</h3>
-          <p>
-            Уштрасана – поза верблюда. Стань на колени, прогнись в спине назад и упрись ладонями рук в пятки ног. Эта
-            поза позволяет побрести контроль над верхними дыхательными органами и дает выносливость.
-          </p>
-          <img src="./images/camel.png" />
-          <input type="checkbox" value="Уштрасана – поза верблюда" data-img="./images/camel.png" /> Вибрати
-        </li>
         <li>
           <h3>Поза полуколеса</h3>
           <p>
