--- a/index.html
+++ b/index.html
@@ -498,25 +498,64 @@
             </fieldset>
           </form>
         </li>
+        <!--15 Поза полуколеса  -->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/polkolesa15.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза полуколеса</h3>
+              <p class="asana-desc">
+                Положи свое прямое тело на землю. Пусть руки лежат вдоль тела. Согни ноги в коленях и поставь их на
+                ступни. Захвати руками лодыжки ног и прогни туловище вверх. Эта поза полуколеса, она дает те же блага,
+                что и поза колеса.
+              </p>
+              <img class="img-desc" src="./images/polKolesa.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
+        <!-- 16 Поза круга - чакраасана-->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/chakraasana.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза круга - чакраасана</h3>
+              <p class="asana-desc">
+                Ляг на спину, согни ноги в коленях. Забрось руки за голову и поставь их на землю. Упирайся на ладони и
+                ступни ног. Прогни свое тело вверх. Затем, пускай ступни и ладони идут на встречу друг другу – так
+                получишь позу круга (чакраасану). Эта асана устраняет загрязнения в позвоночнике и увеличивает жизненные
+                силы.
+              </p>
+              <img class="img-desc" src="./images/koleso.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
 
-        <li>
-          <h3>Поза полуколеса</h3>
-          <p>
-            Положи свое прямое тело на землю. Пусть руки лежат вдоль тела. Согни ноги в коленях и поставь их на ступни.
-            Захвати руками лодыжки ног и прогни туловище вверх. Эта поза полуколеса, она дает те же блага, что и поза
-            колеса.
-          </p>
-          <img src="./images/polKolesa.png" />
-        </li>
-        <li>
-          <h3>Поза круга - чакраасана</h3>
-          <p>
-            Ляг на спину, согни ноги в коленях. Забрось руки за голову и поставь их на землю. Упирайся на ладони и
-            ступни ног. Прогни свое тело вверх. Затем, пускай ступни и ладони идут на встречу друг другу – так получишь
-            позу круга (чакраасану). Эта асана устраняет загрязнения в позвоночнике и увеличивает жизненные силы.
-          </p>
-          <img src="./images/koleso.png" />
-        </li>
         <li>
           <h3>Поза отдыха героя</h3>
           <p>
